completed review of copy to tex

--- a/0001.tex
+++ b/0001.tex
@@ -562,7 +562,7 @@ window through the floor from which the planetoid in space could enter
 his senses directly.
 
 Shevek's view of the lunar surface filled his senses.  It was cold by
-night and hot by day -- either of which wuold kill the unprepared.  He
+night and hot by day -- either of which would kill the unprepared.  He
 folded himself into a seated position and felt his heart beat.  He
 felt Takver with him, there, on that surface.  She wanted to meet in
 space, and she wanted to talk about the surface.
@@ -574,10 +574,10 @@ Shevek considered this.  If Takver wanted to descend, they would be
 talking about how and why.  The how was a problem, like any other,
 that may or may not have an applicable solution.  The why concerned
 him.  Takver's presence was not small.  He found a place to wait for
-him.
+her.
 
 Takver grabbed Shevek from his rest.  Shevek felt the flow of water
-through his heart and went to hiss work station.  Takver was there, in
+through his heart and went to his work station.  Takver was there, in
 a design schematic for a cylindrical volume measuring a kilometer in
 diameter and length.  The structure was silicon, not carbon, and was
 simple and heavy looking in its details.  A horizon marked the lunar
@@ -598,7 +598,7 @@ understand the differences which in awareness would figure largely.
 Understanding this he knew that the issues surrounding the
 similarities and differences were intelllectual.  That fundamentally
 the male and female were two halves of one being, one person that
-walks through this life.  Booth halves are necessary to maturity and
+walks through this life.  Both halves are necessary to maturity and
 development and comprehension.  And with one half one was incomplete
 and not comprehensive.
 
