--- a/0001.tex
+++ b/0001.tex
@@ -40,7 +40,7 @@ those were periodic links to the suurface which roamed between the
 two.  The remainder were in high orbits.
 
 Shevek's IPN address space included each major subsystem following the
-work of Takver to interface NAV and FCTL andd observatory instruments.
+work of Takver to interface NAV and FCTL and observatory instruments.
 He permitted the observation scheduling subsystem to direct attitude
 as a slave to FCTL.  This kept the instruments busy.  While every
 resource was maximized, and Takver on approach, he was coomfortable at
@@ -215,7 +215,9 @@ product schematic showed a sticck figure for the molecular assembly
 under test, his functional analyzer.
 
 He thought of Takver.  The flight console replaced the quantum
-mechanical work station.  ``Working?''.  ``Barely''.
+mechanical work station. 
+
+``Working?''.  ``Barely''.
 
 Separated by three days, the couple was warming from their former
 distance.  Their moment was evolving rapidly, the NAV link was
