--- a/starlog.tex
+++ b/starlog.tex
@@ -1,7 +1,24 @@
 
-\hsize 54.2mm
-\vsize 97.2mm
+\hsize 85mm
+\vsize 128mm
+\hoffset -16mm
+\voffset -18mm
 \special{papersize=105mm,148mm}
+
+\footline = {}
+
+\bigskip
+
+\bigskip
+
+\centerline{\bf Starlog}
+
+\smallskip
+
+\centerline{John Douglas Harold Pritchard}
+
+\break
+
 
 \input 0001
 
