--- a/starlog-0001.tex
+++ b/starlog-0001.tex
@@ -1,3 +1,14 @@
+\input starlog
+
+\centerline{\bf Starlog I}
+
+\smallskip
+
+\centerline{John Douglas Harold Pritchard}
+
+\break
+
+
 
 The semantics of life, earth and body.  Existence and spirituality and
 conscience.  
@@ -604,3 +615,4 @@ walks through this life.  Both halves are necessary to maturity and
 development and comprehension.  And with one half one was incomplete
 and not comprehensive.
 
+\bye
