--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -1,7 +1,7 @@
 
 \input starlog
 
-\centerline{\bf Starlog I}
+\centerline{\bf Starlog II}
 
 \smallskip
 
@@ -19,21 +19,21 @@ awareness than he did.  It grew out of the earth they lived on,
 another wave relation in their space.  Another subject, another
 language.
 
-\smallskip
+\medskip
 
 Cornelius surveyed the orange plains of the martian riverbed through
 vizov.  The life there was growing by his efforts, and those of the
 PDC in raising atmospheric elements.  The terraformation of Mars would
 achieve its next milestone this quarter.
 
-\smallskip
+\medskip
 
 Shevek looked down at the planetoid under him and entered the airlock.
 He sat three hours.  She was here.  He exited with a copper and gold
 visor, and pulled himself to the stations nadir.  Takver grabbed him
 when he came over the aerodynamic bow of the structure.  She was home.
 
-\smallskip
+\medskip
 
 Cornelius would build a lake in this place, wooded with pine and oak.
 It would take a hundred years, and would be named Lake Stuart.  The
@@ -45,7 +45,7 @@ his altitude of three hundred meters above the planned tidal mean.
 When they cleared it was fifteen degrees.  A typical thunderstorm
 lowered the ambient temperature by five degrees.
 
-Stuarts farm covered the two miles of flood plan at its greatest
+Stuart's farm covered the two miles of flood plan at its greatest
 extent.  The hills rose to fifty meters.  Covered in grass, the plain
 sprouted wild flowers, worms and wasps.  Cornelius readied for trees
 and bats and birds.  This quarter he would introduce dragonflies,
