--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -19,21 +19,21 @@ awareness than he did.  It grew out of the earth they lived on,
 another wave relation in their space.  Another subject, another
 language.
 
-\medskip
+\bigskip
 
 Cornelius surveyed the orange plains of the martian riverbed through
 vizov.  The life there was growing by his efforts, and those of the
 PDC in raising atmospheric elements.  The terraformation of Mars would
 achieve its next milestone this quarter.
 
-\medskip
+\bigskip
 
 Shevek looked down at the planetoid under him and entered the airlock.
 He sat three hours.  She was here.  He exited with a copper and gold
 visor, and pulled himself to the stations nadir.  Takver grabbed him
 when he came over the aerodynamic bow of the structure.  She was home.
 
-\medskip
+\bigskip
 
 Cornelius would build a lake in this place, wooded with pine and oak.
 It would take a hundred years, and would be named Lake Stuart.  The
@@ -45,17 +45,31 @@ his altitude of three hundred meters above the planned tidal mean.
 When they cleared it was fifteen degrees.  A typical thunderstorm
 lowered the ambient temperature by five degrees.
 
-Stuart's farm covered the two miles of flood plan at its greatest
-extent.  The hills rose to fifty meters.  Covered in grass, the plain
+Stuart's farm covered the two miles of flood plane at its greatest
+extent.  The hills rose to fifty meters.  Covered in grass, the plane
 sprouted wild flowers, worms and wasps.  Cornelius readied for trees
 and bats and birds.  This quarter he would introduce dragonflies,
 ahead of the birds.
 
-With the pines came warblers and then woodpeckers.  The PDCs seeded
+With the pines came warblers and then woodpeckers.  The PDC's seeded
 species had come to bloom across Stuart's and many similar areas
 across the planet.  Arid covering projects had achieved the area
 necessary to the lifecycle.  From space the planet had become green
 and tan and black.  Water production balanced the ground projects.
 Oceans were scheduled for coming decades.
+
+Cornelius sat at the table Anna set for him.  She prepared soup on a
+wood fired stove that was molded into the hillside, into their home.
+Over the decades they had constructed and reconstructed the structure
+to better fit into the evolving landscape.  
+
+Fifty years ago they had started the lake project.  The PDC's projections
+were combined with a dam to put add a lake to the river, and from that
+foundation the heart of a wood that could survive them.
+
+
+\bigskip
+
+
 
 \bye
