--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -64,9 +64,8 @@ Over the decades they had constructed and reconstructed the structure
 to better fit into the evolving landscape.  
 
 Fifty years ago they had started the lake project.  The PDC's projections
-were combined with a dam to put add a lake to the river, and from that
+were combined with a dam to add a lake to the river, and from that
 foundation the heart of a wood that could survive them.
-
 
 \bigskip
 
