--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -69,6 +69,10 @@ foundation the heart of a wood that could survive them.
 
 \bigskip
 
+Cornelius was two thousand, seven hundred and thirty seven years old.
+The grandson of Shevek and Takver, who lived on earth and its moon.
+His lake was the center of his hemisphere.
+
 
 
 \bye
