--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -71,8 +71,10 @@ foundation the heart of a wood that could survive them.
 
 Cornelius was two thousand, seven hundred and thirty seven years old.
 The grandson of Shevek and Takver, who lived on earth and its moon.
-His lake was the center of his hemisphere.
-
-
+His lake was the center of his hemisphere.  Anna was the same age.
+Friends knew Cornelius and Anna of mars and Shevek and Takver of luna
+as a theme.  While Shevek and Takver were much older, and they only
+rarely met, analog communications links permitted the human society on
+earth, moon and mars a great deal of intercourse.
 
 \bye
