--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -77,4 +77,10 @@ as a theme.  While Shevek and Takver were much older, and they only
 rarely met, analog communications links permitted the human society on
 earth, moon and mars a great deal of intercourse.
 
+\bigskip
+
+Shevek's reply to his message about the bird virus included a
+modification to his STC.  Cornelius lifted the virus from the dead
+bird with success.  
+
 \bye
