--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -81,6 +81,7 @@ earth, moon and mars a great deal of intercourse.
 
 Shevek's reply to his message about the bird virus included a
 modification to his STC.  Cornelius lifted the virus from the dead
-bird with success.  
+bird with success.  He could trace environmental effects for their
+sources.
 
 \bye
