--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -82,6 +82,7 @@ earth, moon and mars a great deal of intercourse.
 Shevek's reply to his message about the bird virus included a
 modification to his STC.  Cornelius lifted the virus from the dead
 bird with success.  He could trace environmental effects for their
-sources.
+sources, and with this knowledge judge the benefits of introducing
+changes.  
 
 \bye
