--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -83,6 +83,8 @@ Shevek's reply to his message about the bird virus included a
 modification to his STC.  Cornelius lifted the virus from the dead
 bird with success.  He could trace environmental effects for their
 sources, and with this knowledge judge the benefits of introducing
-changes.  
+changes.  The processes were well understood.  The virii were
+regulated by the PDC, but their evolutions interacted with the
+environment.  They shouldn't be killing birds.
 
 \bye
