--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -87,4 +87,19 @@ changes.  The processes were well understood.  The virii were
 regulated by the PDC, but their evolutions interacted with the
 environment.  They shouldn't be killing birds.
 
+The STC analysis revealed a process operating in his wood and
+elsewhere.  He identified a viral inhibitor and its possibility space.
+Shevek's modifications to the STC permitted Cornelius a greater level
+of confidence in the probable outcomes from releasing the genetically
+modified descendents of his birds into the wild.  Shevek had said
+something about orders of magnitude greater compute power, but how he
+did it and what he did with it rambled into the ocean.  The birds
+concerned him.  He knew that a good outcome was a no-brainer, and that
+a probably good outcoome worth doing.  In this case, the outcome was
+good.
+
+
+\bigskip
+
+
 \bye
