--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -96,10 +96,13 @@ something about orders of magnitude greater compute power, but how he
 did it and what he did with it rambled into the ocean.  The birds
 concerned him.  He knew that a good outcome was a no-brainer, and that
 a probably good outcoome worth doing.  In this case, the outcome was
-good.
+good.  
 
+The birds would stop dying.  Under these conditions the environment
+would stabilize.
 
 \bigskip
+
 
 
 \bye
