--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -101,6 +101,15 @@ good.
 The birds would stop dying.  Under these conditions the environment
 would stabilize.
 
+Anna's interest in the lake was Cornelius'.  As children on earth they
+had lived near Shevek.  They had spent a quarter of every year on the
+moon since birth.  Never more than minutes apart.  They had focused on
+biology.  They wanted to build a lake on mars since they had learned
+about the terraformation project as children.  It had been their
+life's project.  They had left for mars after university.
+
+
+
 \bigskip
 
 
