--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -108,7 +108,12 @@ biology.  They wanted to build a lake on mars since they had learned
 about the terraformation project as children.  It had been their
 life's project.  They had left for mars after university.
 
-
+The entanglement of Cornelius and Anna maintained an interior world
+separate from all other worlds.  An ocean with waves originating from
+the cardinal directions, and reflecting from the shores of their
+respective continents.  In this space they built their home on the
+other habitable planet in the solar system, but what a home it was.
+They wanted for nothing.
 
 \bigskip
 
