--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -117,6 +117,8 @@ They wanted for nothing.
 
 \bigskip
 
-
+Anna's hives hosted a large swarm of honey bees.  She maintained
+flowers for their dances on the hills above the lake.  She made enough
+honey to share and barter with her neighbors.  
 
 \bye
