--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -119,6 +119,11 @@ They wanted for nothing.
 
 Anna's hives hosted a large swarm of honey bees.  She maintained
 flowers for their dances on the hills above the lake.  She made enough
-honey to share and barter with her neighbors.  
+honey to share and barter with her neighbors.  She and Cornelius both
+enjoyed some honey, but lived on all their interactions with the
+ecosystem.  The birds and bees were natural favorites for the elegance
+and poetry in the data they produced.  Data from chipmunks and cats
+and racoons, deer and bear were far less interesting to follow, but
+more dramatic.  
 
 \bye
