--- a/starlog-0002.tex
+++ b/starlog-0002.tex
@@ -126,4 +126,8 @@ and poetry in the data they produced.  Data from chipmunks and cats
 and racoons, deer and bear were far less interesting to follow, but
 more dramatic.  
 
+Eleanor, Anna's daughter, was space bound.  She had picked up physical
+fabrication and design at fifteen.  Her parents let her print no more
+than cubic volumes until she was eighteen.  At seventeen she waited.
+
 \bye
